[tool.poetry]
name = "lyjournal-scraper"
version = "0.0.1"
description = "中華民國立法院質詢系統檢索結果截取器"
license = "MPL-2.0"
authors = ["Johann Chang <mr.changyuheng@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/changyuheng/taiwan-legislative-yuan-interpellation-scraper"
packages = [
    { include = "lyjournal_scraper", from = "packages" },
]

[tool.poetry.dependencies]
python = "~3.10"
dacite = "^1.6.0"
selenium = "^4.1.3"
tomli = "^2.0.1"
tomli-w = "^1.0.0"
webdriver-manager = "^3.5.4"

[tool.poetry.dev-dependencies]
pyinstaller = "^5.1"

[tool.poetry.scripts]
lyjournal-scraper = 'lyjournal_scraper.main:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
